# CE480-Project

./: .gitignore  README.md  phase1out
final/: CMakeLists.txt
final/client/: client.cpp
final/server/: server.cpp
finalPhase/: CMakeLists.txt  client.cpp  portable_socket.cpp  portable_socket.h  server.cpp  simple_args.h
phase1/: phase1.c
phase2/: .gitignore  CMakeLists.txt  phase2.sln  phase2client.c  phase2server.c  portable_socket.c  portable_socket.h
phase2/_client/: CMakeLists.txt  phase2client.c  portable_socket.c  portable_socket.h
phase2/_server/: CMakeLists.txt  phase2server.c
phase2/phase2/: phase2.vcxproj
phase3/: CMakeLists.txt  phase3.c  phase3.cpp
